tests/core/snapshots/test-batch-operator-post.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user: User
}

type User {
  age: Int
  name: String
}

schema {
  query: Query
}
