tests/core/snapshots/test-batch-operator-post.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "batchKey requires either body or query parameters",
    "trace": [
      "Query",
      "user",
      "@http"
    ],
    "description": null
  }
]
