tests/core/snapshots/test-call-operator-errors.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of missing field `url`",
    "trace": [
      "Query",
      "userWithGraphQLResolver",
      "@graphQL"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of missing field `url`",
    "trace": [
      "Query",
      "userWithGraphQLHeaders",
      "@graphQL"
    ],
    "description": null
  }
]
