tests/core/snapshots/test-conflict-vars.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(vars: [{key: "a", value: "b"}, {key: "c", value: "d"}]) @upstream {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
}
