tests/core/snapshots/test-cors-tailcall-run.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-headers": "*",
    "access-control-allow-methods": "GET, POST, OPTIONS",
    "access-control-allow-origin": "https://tailcall.run",
    "vary": "origin, access-control-request-method, access-control-request-headers"
  },
  "body": null
}
