tests/core/snapshots/test-custom-scalar.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Json

type Query {
  foo: [Json]
}

schema {
  query: Query
}
