tests/core/snapshots/test-custom-types.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mut {
  insertPost(input: PostInput): Post
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

input PostInput {
  body: String
  title: String
  userId: Int
}

type Que {
  posts: [Post]
}

schema {
  query: Que
  mutation: Mut
}
